//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table AcadamicTerm {
  id String [pk]
  name String [not null]
  description String [not null]
  duration String [not null, default: '3 months']
  admin Admin [not null]
  adminId String [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  ExamResult ExamResult
  subject Subject
  teacherId Teacher
}

Table Admin {
  id String [pk]
  AcadamicTerm AcadamicTerm [not null]
  AcadamicYear AcadamicYear [not null]
  name String [not null]
  email String [not null]
  password String [not null]
  role String [not null, default: 'admin']
  createdAt DateTime [not null]
  classLevel ClassLevel [not null]
  Program Program [not null]
  Subject Subject [not null]
  Teacher Teacher [not null]
}

Table AcadamicYear {
  id String [pk]
  name String [not null]
  fromYear DateTime [not null]
  toYear DateTime [not null]
  isCurrent Boolean [not null, default: false]
  admin Admin [not null]
  createdBy String [not null]
  students Student [not null]
  teachers Teacher [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  ExamResult ExamResult
  Exam Exam
  YearGroup YearGroup
}

Table Student {
  id String [pk]
  AcadamicYear AcadamicYear
  AcadamicYearId String
  ClassLevel ClassLevel
  classLevelId String
  examResult ExamResult [not null]
  program Program [not null]
  programId String [not null]
  name String [not null]
  perfectName String
  email String [not null]
  password String [not null]
  studentId String [not null, default: '']
  role String [not null, default: 'student']
  dateAdmitted DateTime [default: `now()`, not null]
  examResults ExamResults [not null]
  isWithdrawn Boolean [not null, default: false]
  isSuspended Boolean [not null, default: false]
  isGraduated Boolean [not null, default: false]
  isPromoted Boolean [not null, default: false]
  yearGraduated String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Teacher {
  id String [pk]
  AcadamicYear AcadamicYear
  AcadamicYearId String
  ClassLevel ClassLevel
  classLevelId String
  program Program [not null]
  programId String [not null]
  question Question
  subject Subject [not null]
  name String [not null]
  email String [not null]
  password String [not null]
  teacherID String [not null, default: '']
  dateEmployed DateTime [default: `now()`, not null]
  isWithdrawn Boolean [not null, default: false]
  isSuspended Boolean [not null, default: false]
  role Role [not null, default: 'teacher']
  applicationStatus Status [not null, default: 'pending']
  examsCreated Exam [not null]
  createdId Admin [not null]
  createdBy String [not null]
  acadamicId AcadamicTerm [not null]
  acadamicTermId String [unique, not null]
}

Table ClassLevel {
  id String [pk]
  Admin Admin
  adminId String
  teachers Teacher [not null]
  students Student [not null]
  subjects Subject [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  ExamResult ExamResult
  Exam Exam
}

Table Subject {
  id String [pk]
  ClassLevel ClassLevel
  classLevelId String
  ExamResult ExamResult
  exam Exam
  program Program [not null]
  programId String [not null]
  name String [not null]
  description String
  teacher Teacher [not null]
  teacherId String [not null]
  acadamic AcadamicTerm [not null]
  acadamicTermId String [unique, not null]
  admin Admin [not null]
  adminId String [not null]
  duration String [not null, default: '3 Months']
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table ExamResult {
  id String [pk]
  Student Student
  studentId String
  exam Exam [not null]
  examId String [unique, not null]
  student Subject [not null]
  subjectId String [unique, not null]
  acadamicYear AcadamicYear [not null]
  acadamicYearId String [unique, not null]
  acadaminTerm AcadamicTerm [not null]
  acadamicTermId String [unique, not null]
  classLevel ClassLevel [not null]
  classLevelId String [unique, not null]
  grade Int [not null]
  score Int [not null]
  passMark Int [not null, default: 50]
  status ExamResultStatus [not null, default: 'failed']
  reamarks Remarks [not null, default: 'poor']
  position Int [not null]
  isPublished Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Exam {
  id String [pk]
  ExamResult ExamResult
  name String [not null]
  description String [not null]
  subject Subject [not null]
  subjectId String [unique, not null]
  program Program [not null]
  programId String [not null]
  passMark Int [not null, default: 50]
  totalMark Int [not null, default: 100]
  duration String [not null, default: '30']
  examDate DateTime [not null]
  examTime String [not null]
  examType String [not null, default: 'Quiz']
  examStatus ExamStatus [not null, default: 'pending']
  questions Question [not null]
  classLevel ClassLevel [not null]
  classLevelId String [unique, not null]
  createdBy String [unique, not null]
  acadamicYear AcadamicYear [not null]
  acadanmicYear String [unique, not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  teacher Teacher [not null]
  teacherId String [not null]
}

Table Program {
  id String [pk]
  Exam Exam [not null]
  name String [not null]
  description String [not null]
  duration String [not null, default: '4 Years']
  code String [not null, default: '']
  adminId Admin [not null]
  createdBy String [not null]
  teachers Teacher [not null]
  students Student [not null]
  Subjects Subject [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table Question {
  id String [pk]
  Exam Exam
  examId String
  questionName String [not null]
  optionA String [not null]
  optionB String [not null]
  optionC String [not null]
  optionD String [not null]
  correctAnswer String [not null]
  isCorrect Boolean [not null, default: false]
  teacher Teacher [not null]
  createdBy String [unique, not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table ExamResults {
  id String [pk]
  Student Student
  studentId String
}

Table YearGroup {
  id String [pk]
  name String [not null]
  acadamicYear AcadamicYear
  acadamicYearId String [unique, not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Enum ExamResultStatus {
  failed
  passed
}

Enum Remarks {
  Excellent
  good
  poor
}

Enum ExamStatus {
  pending
  approved
  live
}

Enum Role {
  teacher
  admin
}

Enum Status {
  pending
  approved
  rejected
}

Ref: AcadamicTerm.adminId > Admin.id

Ref: AcadamicYear.createdBy > Admin.id

Ref: Student.AcadamicYearId > AcadamicYear.id

Ref: Student.classLevelId > ClassLevel.id

Ref: Student.programId > Program.id

Ref: Teacher.AcadamicYearId > AcadamicYear.id

Ref: Teacher.classLevelId > ClassLevel.id

Ref: Teacher.programId > Program.id

Ref: Teacher.createdBy > Admin.id

Ref: Teacher.acadamicTermId - AcadamicTerm.id

Ref: ClassLevel.adminId > Admin.id

Ref: Subject.classLevelId > ClassLevel.id

Ref: Subject.programId > Program.id

Ref: Subject.teacherId > Teacher.id

Ref: Subject.acadamicTermId - AcadamicTerm.id

Ref: Subject.adminId > Admin.id

Ref: ExamResult.studentId > Student.id

Ref: ExamResult.examId - Exam.id

Ref: ExamResult.subjectId - Subject.id

Ref: ExamResult.acadamicYearId - AcadamicYear.id

Ref: ExamResult.acadamicTermId - AcadamicTerm.id

Ref: ExamResult.classLevelId - ClassLevel.id

Ref: Exam.subjectId - Subject.id

Ref: Exam.programId > Program.id

Ref: Exam.classLevelId - ClassLevel.id

Ref: Exam.acadanmicYear - AcadamicYear.id

Ref: Exam.teacherId > Teacher.id

Ref: Program.createdBy > Admin.id

Ref: Question.examId > Exam.id

Ref: Question.createdBy - Teacher.id

Ref: ExamResults.studentId > Student.id

Ref: YearGroup.acadamicYearId - AcadamicYear.id